--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node server/server.js",
-    "start:dev": "node_modules/.bin/nodemon --watch server --exec babel-node server/server.js"
+    "start:dev": "nodemon --watch server --exec babel-node server/server.js"
   },
   "repository": {
     "type": "git",
