- I installed the pgadmin, jwt, - I added the created seed for the db - I configure pg client with a .env file - I added the user controller to signin and login - I created route for the signin and login api

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node server/server.js",
-    "start:dev": "nodemon --watch server --exec babel-node server/server.js"
+    "start:dev": "set NODE_ENV=development&& nodemon --watch server --exec babel-node server/server.js",
+    "db:migrate": "babel-node server/seed/index.js",
+    "migrate": "set NODE_ENV=development&& babel-node server/seed/index.js"
   },
   "repository": {
     "type": "git",
