- I add controller to get a question - I add controller to get all questions by user - I add controller to get all questions by all users - I added controller to delete a question - I added a controller to modify a question - I updated package.json file with spread operator - I reconfigured babelrc fill to include spread operator plugin

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/TMDav007/questionAndAnswer#readme",
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
