--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.3",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "validatorjs": "^3.18.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
