--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node server/server.js",
-    "start:dev": "set NODE_ENV=development&& nodemon --watch server --exec babel-node server/server.js",
+    "start:dev": "set NODE_ENV=test&& nodemon --watch server --exec babel-node server/server.js",
     "db:migrate": "babel-node server/seed/index.js",
-    "migrate": "set NODE_ENV=development&& babel-node server/seed/index.js"
+    "migrate": "set NODE_ENV=development&& babel-node server/seed/index.js",
+    "test": "set NODE_ENV=test&& babel-node server/seed/index.js && mocha --require babel-core/register --require babel-polyfill ./server/test/ --timeout 10000 --exit",
+    "nyc": "nyc --reporter=lcov npm run test"
   },
   "repository": {
     "type": "git",
@@ -25,12 +27,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.3",
+    "nyc": "^15.1.0",
     "pg": "^8.2.1",
+    "supertest": "^4.0.2",
     "validatorjs": "^3.18.1"
   },
   "devDependencies": {
