--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": [
-      "env"
+    "@babel/preset-env", "@babel/preset-react"
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
