--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
@@ -48,11 +50,7 @@
     "validatorjs": "^3.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.10.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.1.0",
@@ -60,11 +58,13 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.21.1",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
