--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:app": "webpack-dev-server --open --mode development",
+    "start:app": "webpack-dev-server --open --mode development --history-api-fallback",
     "build": "webpack --mode production",
     "start": "babel-node server/server.js",
     "start:dev": "set NODE_ENV=development&& nodemon --watch server --exec babel-node server/server.js",
@@ -24,16 +24,12 @@
   },
   "homepage": "https://github.com/TMDav007/questionAndAnswer#readme",
   "dependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-cli": "^6.26.0",
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/polyfill": "^7.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
@@ -50,6 +46,7 @@
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "supertest": "^4.0.2",
     "validatorjs": "^3.18.1"
   },
