--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "supertest": "^4.0.2",
     "validatorjs": "^3.18.1"
   },
