--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "braces": "^3.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cloudinary": "^1.25.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
